--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
 
     </style>
 </noscript>
-<link rel="stylesheet" href="/my-af-site/css/custom.min.3e4c780b524f62ea9c1d2b07014933c3de51855050a6cfa564ab8fdda51983ef.css" integrity="sha256-Pkx4C1JPYuqcHSsHAUkzw95RhVBQps&#43;lZKuP3aUZg&#43;8=">
+<link rel="stylesheet" href="/my-af-site/css/custom.min.31d57f0891cf7259f1778061a88371d4c642d4720460607c831ebb414df89984.css" integrity="sha256-MdV/CJHPclnxd4BhqINx1MZC1HIEYGB8gx67QU34mYQ=">
 <script defer>
     document.addEventListener('DOMContentLoaded', () => {
         const toggleButton = document.getElementById('layout-toggle');
