--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja" dir="auto">
 
-<head><script src="/my-af-site/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=my-af-site/livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/my-af-site/404.html">
-<link crossorigin="anonymous" href="/my-af-site/assets/css/stylesheet.8fe10233a706bc87f2e08b3cf97b8bd4c0a80f10675a143675d59212121037c0.css" integrity="sha256-j&#43;ECM6cGvIfy4Is8&#43;XuL1MCoDxBnWhQ2ddWSEhIQN8A=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/my-af-site/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/my-af-site/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/my-af-site/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/my-af-site/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/my-af-site/safari-pinned-tab.svg">
+<link rel="canonical" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.8fe10233a706bc87f2e08b3cf97b8bd4c0a80f10675a143675d59212121037c0.css" integrity="sha256-j&#43;ECM6cGvIfy4Is8&#43;XuL1MCoDxBnWhQ2ddWSEhIQN8A=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/apple-touch-icon.png">
+<link rel="mask-icon" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="ja" href="http://localhost:1313/my-af-site/404.html">
+<link rel="alternate" hreflang="ja" href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -28,7 +28,7 @@
 
     </style>
 </noscript>
-<link rel="stylesheet" href="/my-af-site/css/custom.min.31d57f0891cf7259f1778061a88371d4c642d4720460607c831ebb414df89984.css" integrity="sha256-MdV/CJHPclnxd4BhqINx1MZC1HIEYGB8gx67QU34mYQ=">
+<link rel="stylesheet" href="/css/custom.min.07b577dd18cd93df9e386425b82dcdcb6d92d28e6161722926c533c3e16d2632.css" integrity="sha256-B7V33RjNk9&#43;eOGQluC3Ny22S0o5hYXIpJsUzw&#43;FtJjI=">
 <script defer>
     document.addEventListener('DOMContentLoaded', () => {
         const toggleButton = document.getElementById('layout-toggle');
@@ -54,7 +54,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/my-af-site/" accesskey="h" title="Ultimate ROOM (Alt + H)">Ultimate ROOM</a>
+            <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/" accesskey="h" title="Ultimate ROOM (Alt + H)">Ultimate ROOM</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -80,22 +80,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/my-af-site/" title="ホーム">
+                <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/" title="ホーム">
                     <span>ホーム</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/my-af-site/categories/" title="Categories">
+                <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/categories/" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/my-af-site/tags/" title="Tags">
+                <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/my-af-site/about/" title="このサイトについて">
+                <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/about/" title="このサイトについて">
                     <span>このサイトについて</span>
                 </a>
             </li>
@@ -107,7 +107,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/my-af-site/">Ultimate ROOM</a></span> · 
+        <span>&copy; 2025 <a href="https://orange-potato-974qjwrr9x9vc7r5x-1313.app.github.dev:1313/">Ultimate ROOM</a></span> · 
 
     <span>
         Powered by
