--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
 
     </style>
 </noscript>
-<link rel="stylesheet" href="/css/custom.min.07b577dd18cd93df9e386425b82dcdcb6d92d28e6161722926c533c3e16d2632.css" integrity="sha256-B7V33RjNk9&#43;eOGQluC3Ny22S0o5hYXIpJsUzw&#43;FtJjI=">
+<link rel="stylesheet" href="/css/custom.min.ee00d9079689327db0278909dec9034646784b3ec66004817b846111906a544c.css" integrity="sha256-7gDZB5aJMn2wJ4kJ3skDRkZ4Sz7GYASBe4RhEZBqVEw=">
 <script defer>
     document.addEventListener('DOMContentLoaded', () => {
         const toggleButton = document.getElementById('layout-toggle');
